db/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer

spec:
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:4
          ports:
            - name: http
              containerPort: 8080
