db/mariadb-stateful-set.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mariadb

spec:
  serviceName: mariadb
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/hostname: moto-a1-3

      volumes:
        - name: data
          hostPath:
            path: /srv/mariadb/data

      containers:
        - name: mariadb
          image: mariadb:11.7.2
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
