db/mongo-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo

spec:
  replicas: 1
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  serviceName: mongo
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/hostname: moto-a1-3

      volumes:
        - name: data
          hostPath:
            path: /srv/mongo/data

      containers:
        - name: mongo
          image: mongo:8.0.1
          args:
            - "mongod"
            - "--auth"
            - "--bind_ip_all"
          ports:
            - name: mongo
              containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db
          resources:
            limits:
              memory: 512Mi
