db/postgres-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres

spec:
  replicas: 1
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  serviceName: postgres
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/hostname: moto-a1-3

      volumes:
        - name: data
          hostPath:
            path: /srv/postgres/data

      containers:
        - name: postgres
          image: postgres:16
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              memory: 512Mi
