db/adminer-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adminer

spec:
  entryPoints:
    - websecure
  tls:
    secretName: adminer-tls
  routes:
    - kind: Rule
      match: Host(`adminer.toki317.dev`)
      middlewares:
        - name: auth-toki317-dev-admin
          namespace: auth
      services:
        - namespace: db
          kind: Service
          name: adminer
          port: http
          scheme: http
